@@ -3,7 +3,7 @@
    OpenTelemetry instrumentation agent."
   (:require [steffan-westcott.clj-otel.api.metrics.instrument :as instrument]
             [steffan-westcott.clj-otel.context :as context])
-  (:import (io.opentelemetry.semconv.trace.attributes SemanticAttributes)))
+  (:import (io.opentelemetry.semconv SemanticAttributes)))
 
 (defn- now-millis!
   []
@@ -67,16 +67,16 @@
 (defn- active-requests-attrs
   [server-request-attrs]
   (select-keys server-request-attrs
-               [SemanticAttributes/HTTP_METHOD SemanticAttributes/HTTP_SCHEME
-                SemanticAttributes/NET_HOST_NAME]))
+               [SemanticAttributes/HTTP_REQUEST_METHOD SemanticAttributes/URL_SCHEME
+                SemanticAttributes/SERVER_ADDRESS]))
 
 (defn- request-duration-or-size-attrs
   [server-request-attrs status]
   (-> (select-keys server-request-attrs
-                   [SemanticAttributes/HTTP_METHOD SemanticAttributes/HTTP_ROUTE
-                    SemanticAttributes/HTTP_SCHEME SemanticAttributes/NET_HOST_NAME
-                    SemanticAttributes/NET_HOST_PORT])
-      (assoc SemanticAttributes/HTTP_STATUS_CODE status)))
+                   [SemanticAttributes/HTTP_REQUEST_METHOD SemanticAttributes/HTTP_ROUTE
+                    SemanticAttributes/URL_SCHEME SemanticAttributes/SERVER_ADDRESS
+                    SemanticAttributes/SERVER_PORT])
+      (assoc SemanticAttributes/HTTP_RESPONSE_STATUS_CODE status)))
 
 (defn- record-duration!
   ([start-time server-request-attrs status]
@@ -90,7 +90,7 @@
 (defn- record-request-size!
   ([server-request-attrs status] (record-request-size! server-request-attrs status (context/dyn)))
   ([server-request-attrs status context]
-   (when-let [size (get server-request-attrs SemanticAttributes/HTTP_REQUEST_CONTENT_LENGTH)]
+   (when-let [size (get server-request-attrs SemanticAttributes/HTTP_REQUEST_BODY_SIZE)]
      (instrument/record! @request-size
                          {:value      size
                           :attributes (request-duration-or-size-attrs server-request-attrs status)
