@@ -46,6 +46,8 @@ Added load generator applications to microservices examples.
 - Bump deps:
 * [MAINT] OpenTelemetry `1.30.1`
 ** [BREAK] `clj-otel-exporter-jaeger-*` are now deprecated, use `clj-otel-exporter-otlp` instead
+* [BREAK] Now using `io.opentelemetry.semconv/opentelemetry-semconv` semantic conventions.
+This impacts manually instrumented HTTP server applications using `clj-otel` middleware or interceptors, as several semantic attributes have changed.
 * [MAINT] gRPC `1.58.0`
 
 === `0.2.3` (2023-06-18)
